RESOLVED FIXED205612
[iOS] Layout tests sometimes throw an exception under checkForOutstandingCallbacks
https://bugs.webkit.org/show_bug.cgi?id=205612
Summary [iOS] Layout tests sometimes throw an exception under checkForOutstandingCall...
Wenson Hsieh
Reported 2019-12-27 18:45:30 PST
Attachments
Patch (10.39 KB, patch)
2019-12-27 19:19 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-12-27 19:19:05 PST
Wenson Hsieh
Comment 2 2019-12-28 17:20:49 PST
Comment on attachment 386462 [details] Patch Thanks for the review!
WebKit Commit Bot
Comment 3 2019-12-28 18:05:17 PST
Comment on attachment 386462 [details] Patch Clearing flags on attachment: 386462 Committed r253929: <https://trac.webkit.org/changeset/253929>
WebKit Commit Bot
Comment 4 2019-12-28 18:05:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.